antlr4_generated/ProgramParser.py
# Generated from Program.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ProgramParser ( Parser ):

    grammarFileName = "Program.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "','", "';'", "'{'", "'}'", 
                     "'.'", "'['", "']'", "':'", "'function'", "'precondition'", 
                     "'postcondition'", "'invariant'", "'decreases'", "'='", 
                     "'if'", "'else'", "'while'", "'assert'", "'write'", 
                     "'lockTreeLock'", "'lockTreeUnlock'", "'lock'", "'unlock'", 
                     "'length'", "'forall'", "'exists'", "'!'", "'&&'", 
                     "'||'", "'==>'", "'+'", "'-'", "'*'", "'/'", "'=='", 
                     "'!='", "'>'", "'<'", "'>='", "'<='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "FUNCTION", 
                      "PRECONDITION", "POSTCONDITION", "INVARIANT", "DECREASES", 
                      "ASSIGN", "IF", "ELSE", "WHILE", "ASSERT", "WRITE", 
                      "LOCK_TREE_LOCK", "LOCK_TREE_UNLOCK", "LOCK", "UNLOCK", 
                      "LENGTH", "FORALL", "EXISTS", "NEGATE", "AND", "OR", 
                      "IMPLIES", "ADD", "SUBTRACT", "MULTIPLY", "DIVIDE", 
                      "EQUAL", "NOT_EQUAL", "GREATER", "LESS", "GREATER_EQUAL", 
                      "LESS_EQUAL", "LITERAL_INT", "LITERAL_BOOL", "TYPE", 
                      "ID", "WHITE_SPACE", "COMMENT" ]

    RULE_program = 0
    RULE_function = 1
    RULE_functionPreCondition = 2
    RULE_functionPostCondition = 3
    RULE_functionParameters = 4
    RULE_functionParameter = 5
    RULE_functionCall = 6
    RULE_functionCallArguments = 7
    RULE_statement = 8
    RULE_loopInvariantCondition = 9
    RULE_loopDecreasesConditions = 10
    RULE_expression = 11

    ruleNames =  [ "program", "function", "functionPreCondition", "functionPostCondition", 
                   "functionParameters", "functionParameter", "functionCall", 
                   "functionCallArguments", "statement", "loopInvariantCondition", 
                   "loopDecreasesConditions", "expression" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    FUNCTION=11
    PRECONDITION=12
    POSTCONDITION=13
    INVARIANT=14
    DECREASES=15
    ASSIGN=16
    IF=17
    ELSE=18
    WHILE=19
    ASSERT=20
    WRITE=21
    LOCK_TREE_LOCK=22
    LOCK_TREE_UNLOCK=23
    LOCK=24
    UNLOCK=25
    LENGTH=26
    FORALL=27
    EXISTS=28
    NEGATE=29
    AND=30
    OR=31
    IMPLIES=32
    ADD=33
    SUBTRACT=34
    MULTIPLY=35
    DIVIDE=36
    EQUAL=37
    NOT_EQUAL=38
    GREATER=39
    LESS=40
    GREATER_EQUAL=41
    LESS_EQUAL=42
    LITERAL_INT=43
    LITERAL_BOOL=44
    TYPE=45
    ID=46
    WHITE_SPACE=47
    COMMENT=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function(self):
            return self.getTypedRuleContext(ProgramParser.FunctionContext,0)


        def EOF(self):
            return self.getToken(ProgramParser.EOF, 0)

        def functionCall(self):
            return self.getTypedRuleContext(ProgramParser.FunctionCallContext,0)


        def getRuleIndex(self):
            return ProgramParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ProgramParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self.function()
            self.state = 26
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==46:
                self.state = 25
                self.functionCall()


            self.state = 28
            self.match(ProgramParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(ProgramParser.FUNCTION, 0)

        def ID(self):
            return self.getToken(ProgramParser.ID, 0)

        def statement(self):
            return self.getTypedRuleContext(ProgramParser.StatementContext,0)


        def functionParameters(self):
            return self.getTypedRuleContext(ProgramParser.FunctionParametersContext,0)


        def functionPreCondition(self):
            return self.getTypedRuleContext(ProgramParser.FunctionPreConditionContext,0)


        def functionPostCondition(self):
            return self.getTypedRuleContext(ProgramParser.FunctionPostConditionContext,0)


        def getRuleIndex(self):
            return ProgramParser.RULE_function

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = ProgramParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.match(ProgramParser.FUNCTION)
            self.state = 31
            self.match(ProgramParser.ID)
            self.state = 32
            self.match(ProgramParser.T__0)
            self.state = 34
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==45:
                self.state = 33
                self.functionParameters()


            self.state = 36
            self.match(ProgramParser.T__1)
            self.state = 38
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 37
                self.functionPreCondition()


            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 40
                self.functionPostCondition()


            self.state = 43
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionPreConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRECONDITION(self):
            return self.getToken(ProgramParser.PRECONDITION, 0)

        def expression(self):
            return self.getTypedRuleContext(ProgramParser.ExpressionContext,0)


        def getRuleIndex(self):
            return ProgramParser.RULE_functionPreCondition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionPreCondition" ):
                return visitor.visitFunctionPreCondition(self)
            else:
                return visitor.visitChildren(self)




    def functionPreCondition(self):

        localctx = ProgramParser.FunctionPreConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_functionPreCondition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(ProgramParser.PRECONDITION)
            self.state = 46
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionPostConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def POSTCONDITION(self):
            return self.getToken(ProgramParser.POSTCONDITION, 0)

        def expression(self):
            return self.getTypedRuleContext(ProgramParser.ExpressionContext,0)


        def getRuleIndex(self):
            return ProgramParser.RULE_functionPostCondition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionPostCondition" ):
                return visitor.visitFunctionPostCondition(self)
            else:
                return visitor.visitChildren(self)




    def functionPostCondition(self):

        localctx = ProgramParser.FunctionPostConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_functionPostCondition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(ProgramParser.POSTCONDITION)
            self.state = 49
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionParametersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionParameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProgramParser.FunctionParameterContext)
            else:
                return self.getTypedRuleContext(ProgramParser.FunctionParameterContext,i)


        def getRuleIndex(self):
            return ProgramParser.RULE_functionParameters

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionParameters" ):
                return visitor.visitFunctionParameters(self)
            else:
                return visitor.visitChildren(self)




    def functionParameters(self):

        localctx = ProgramParser.FunctionParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_functionParameters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.functionParameter()
            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 52
                self.match(ProgramParser.T__2)
                self.state = 53
                self.functionParameter()
                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(ProgramParser.TYPE, 0)

        def ID(self):
            return self.getToken(ProgramParser.ID, 0)

        def getRuleIndex(self):
            return ProgramParser.RULE_functionParameter

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionParameter" ):
                return visitor.visitFunctionParameter(self)
            else:
                return visitor.visitChildren(self)




    def functionParameter(self):

        localctx = ProgramParser.FunctionParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_functionParameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(ProgramParser.TYPE)
            self.state = 60
            self.match(ProgramParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ProgramParser.ID, 0)

        def functionCallArguments(self):
            return self.getTypedRuleContext(ProgramParser.FunctionCallArgumentsContext,0)


        def getRuleIndex(self):
            return ProgramParser.RULE_functionCall

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionCall" ):
                return visitor.visitFunctionCall(self)
            else:
                return visitor.visitChildren(self)




    def functionCall(self):

        localctx = ProgramParser.FunctionCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_functionCall)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(ProgramParser.ID)
            self.state = 63
            self.match(ProgramParser.T__0)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 96775142637826) != 0):
                self.state = 64
                self.functionCallArguments()


            self.state = 67
            self.match(ProgramParser.T__1)
            self.state = 68
            self.match(ProgramParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionCallArgumentsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProgramParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ProgramParser.ExpressionContext,i)


        def getRuleIndex(self):
            return ProgramParser.RULE_functionCallArguments

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionCallArguments" ):
                return visitor.visitFunctionCallArguments(self)
            else:
                return visitor.visitChildren(self)




    def functionCallArguments(self):

        localctx = ProgramParser.FunctionCallArgumentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_functionCallArguments)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.expression(0)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 71
                self.match(ProgramParser.T__2)
                self.state = 72
                self.expression(0)
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ProgramParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class LockTreeUnlockStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProgramParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LOCK_TREE_UNLOCK(self):
            return self.getToken(ProgramParser.LOCK_TREE_UNLOCK, 0)
        def ID(self):
            return self.getToken(ProgramParser.ID, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLockTreeUnlockStatement" ):
                return visitor.visitLockTreeUnlockStatement(self)
            else:
                return visitor.visitChildren(self)


    class AssignmentStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProgramParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(ProgramParser.ID, 0)
        def ASSIGN(self):
            return self.getToken(ProgramParser.ASSIGN, 0)
        def expression(self):
            return self.getTypedRuleContext(ProgramParser.ExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignmentStatement" ):
                return visitor.visitAssignmentStatement(self)
            else:
                return visitor.visitChildren(self)


    class LockTreeLockStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProgramParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LOCK_TREE_LOCK(self):
            return self.getToken(ProgramParser.LOCK_TREE_LOCK, 0)
        def ID(self):
            return self.getToken(ProgramParser.ID, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLockTreeLockStatement" ):
                return visitor.visitLockTreeLockStatement(self)
            else:
                return visitor.visitChildren(self)


    class IfElseStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProgramParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(ProgramParser.IF, 0)
        def expression(self):
            return self.getTypedRuleContext(ProgramParser.ExpressionContext,0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProgramParser.StatementContext)
            else:
                return self.getTypedRuleContext(ProgramParser.StatementContext,i)

        def ELSE(self):
            return self.getToken(ProgramParser.ELSE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfElseStatement" ):
                return visitor.visitIfElseStatement(self)
            else:
                return visitor.visitChildren(self)


    class WriteStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProgramParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WRITE(self):
            return self.getToken(ProgramParser.WRITE, 0)
        def expression(self):
            return self.getTypedRuleContext(ProgramParser.ExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWriteStatement" ):
                return visitor.visitWriteStatement(self)
            else:
                return visitor.visitChildren(self)


    class BlockStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProgramParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProgramParser.StatementContext)
            else:
                return self.getTypedRuleContext(ProgramParser.StatementContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockStatement" ):
                return visitor.visitBlockStatement(self)
            else:
                return visitor.visitChildren(self)


    class UnlockStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProgramParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(ProgramParser.ID, 0)
        def UNLOCK(self):
            return self.getToken(ProgramParser.UNLOCK, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnlockStatement" ):
                return visitor.visitUnlockStatement(self)
            else:
                return visitor.visitChildren(self)


    class LoopStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProgramParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(ProgramParser.WHILE, 0)
        def expression(self):
            return self.getTypedRuleContext(ProgramParser.ExpressionContext,0)

        def statement(self):
            return self.getTypedRuleContext(ProgramParser.StatementContext,0)

        def loopInvariantCondition(self):
            return self.getTypedRuleContext(ProgramParser.LoopInvariantConditionContext,0)

        def loopDecreasesConditions(self):
            return self.getTypedRuleContext(ProgramParser.LoopDecreasesConditionsContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoopStatement" ):
                return visitor.visitLoopStatement(self)
            else:
                return visitor.visitChildren(self)


    class ListSetStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProgramParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(ProgramParser.ID, 0)
        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProgramParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ProgramParser.ExpressionContext,i)

        def ASSIGN(self):
            return self.getToken(ProgramParser.ASSIGN, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListSetStatement" ):
                return visitor.visitListSetStatement(self)
            else:
                return visitor.visitChildren(self)


    class AssertionStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProgramParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ASSERT(self):
            return self.getToken(ProgramParser.ASSERT, 0)
        def expression(self):
            return self.getTypedRuleContext(ProgramParser.ExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssertionStatement" ):
                return visitor.visitAssertionStatement(self)
            else:
                return visitor.visitChildren(self)


    class LockStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProgramParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(ProgramParser.ID, 0)
        def LOCK(self):
            return self.getToken(ProgramParser.LOCK, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLockStatement" ):
                return visitor.visitLockStatement(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = ProgramParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 150
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                localctx = ProgramParser.AssignmentStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                self.match(ProgramParser.ID)
                self.state = 79
                self.match(ProgramParser.ASSIGN)
                self.state = 80
                self.expression(0)
                self.state = 81
                self.match(ProgramParser.T__3)
                pass

            elif la_ == 2:
                localctx = ProgramParser.BlockStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.match(ProgramParser.T__4)
                self.state = 85 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 84
                    self.statement()
                    self.state = 87 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 70368760561696) != 0)):
                        break

                self.state = 89
                self.match(ProgramParser.T__5)
                pass

            elif la_ == 3:
                localctx = ProgramParser.IfElseStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 91
                self.match(ProgramParser.IF)
                self.state = 92
                self.match(ProgramParser.T__0)
                self.state = 93
                self.expression(0)
                self.state = 94
                self.match(ProgramParser.T__1)
                self.state = 95
                self.statement()
                self.state = 98
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                if la_ == 1:
                    self.state = 96
                    self.match(ProgramParser.ELSE)
                    self.state = 97
                    self.statement()


                pass

            elif la_ == 4:
                localctx = ProgramParser.LoopStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 100
                self.match(ProgramParser.WHILE)
                self.state = 101
                self.match(ProgramParser.T__0)
                self.state = 102
                self.expression(0)
                self.state = 103
                self.match(ProgramParser.T__1)
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==14:
                    self.state = 104
                    self.loopInvariantCondition()


                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==15:
                    self.state = 107
                    self.loopDecreasesConditions()


                self.state = 110
                self.statement()
                pass

            elif la_ == 5:
                localctx = ProgramParser.AssertionStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 112
                self.match(ProgramParser.ASSERT)
                self.state = 113
                self.match(ProgramParser.T__0)
                self.state = 114
                self.expression(0)
                self.state = 115
                self.match(ProgramParser.T__1)
                self.state = 116
                self.match(ProgramParser.T__3)
                pass

            elif la_ == 6:
                localctx = ProgramParser.WriteStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 118
                self.match(ProgramParser.WRITE)
                self.state = 119
                self.match(ProgramParser.T__0)
                self.state = 120
                self.expression(0)
                self.state = 121
                self.match(ProgramParser.T__1)
                self.state = 122
                self.match(ProgramParser.T__3)
                pass

            elif la_ == 7:
                localctx = ProgramParser.LockTreeLockStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 124
                self.match(ProgramParser.LOCK_TREE_LOCK)
                self.state = 125
                self.match(ProgramParser.T__0)
                self.state = 126
                self.match(ProgramParser.ID)
                self.state = 127
                self.match(ProgramParser.T__1)
                self.state = 128
                self.match(ProgramParser.T__3)
                pass

            elif la_ == 8:
                localctx = ProgramParser.LockTreeUnlockStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 129
                self.match(ProgramParser.LOCK_TREE_UNLOCK)
                self.state = 130
                self.match(ProgramParser.T__0)
                self.state = 131
                self.match(ProgramParser.ID)
                self.state = 132
                self.match(ProgramParser.T__1)
                self.state = 133
                self.match(ProgramParser.T__3)
                pass

            elif la_ == 9:
                localctx = ProgramParser.LockStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 134
                self.match(ProgramParser.ID)
                self.state = 135
                self.match(ProgramParser.T__6)
                self.state = 136
                self.match(ProgramParser.LOCK)
                self.state = 137
                self.match(ProgramParser.T__3)
                pass

            elif la_ == 10:
                localctx = ProgramParser.UnlockStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 10)
                self.state = 138
                self.match(ProgramParser.ID)
                self.state = 139
                self.match(ProgramParser.T__6)
                self.state = 140
                self.match(ProgramParser.UNLOCK)
                self.state = 141
                self.match(ProgramParser.T__3)
                pass

            elif la_ == 11:
                localctx = ProgramParser.ListSetStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 11)
                self.state = 142
                self.match(ProgramParser.ID)
                self.state = 143
                self.match(ProgramParser.T__7)
                self.state = 144
                self.expression(0)
                self.state = 145
                self.match(ProgramParser.T__8)
                self.state = 146
                self.match(ProgramParser.ASSIGN)
                self.state = 147
                self.expression(0)
                self.state = 148
                self.match(ProgramParser.T__3)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopInvariantConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INVARIANT(self):
            return self.getToken(ProgramParser.INVARIANT, 0)

        def expression(self):
            return self.getTypedRuleContext(ProgramParser.ExpressionContext,0)


        def getRuleIndex(self):
            return ProgramParser.RULE_loopInvariantCondition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoopInvariantCondition" ):
                return visitor.visitLoopInvariantCondition(self)
            else:
                return visitor.visitChildren(self)




    def loopInvariantCondition(self):
